# source-radar

./: .gitignore  CHANGELOG.md  LICENSE  README.md  bing_response.html  mcp_search.json  pyproject.toml  restart-mcp.ps1  source-radar.ps1
app/: README.md
app/source_radar/: __init__.py  __main__.py  acquisition.py  adapters.py  agent.py  bridge.py  cache.py  cli.py  config.py  cookie_capture.py  engine.py  evidence.py  health.py  integrations.py  judgement.py  llm.py  models.py  reporting.py  runtime.py  search_planner.py  session.py  uninstall.py
app/source_radar/mcp/: __init__.py  server.py
docs/context/: development-roadmap.md
docs/tasks/adapters/: INDEX.md
docs/tasks/cli/: INDEX.md
docs/tasks/health/: INDEX.md
docs/tasks/integrations/: INDEX.md
docs/tasks/mcp/: INDEX.md  design.md
skills/source-radar/: .source-radar-skill.json  SKILL.md
skills/source-radar/commands/: test-provider.md  test.md
skills/source-radar/scripts/: run.py
tests/: regression-samples.md  test_acquisition_m5.py  test_adapters_m2.py  test_agent_flow.py  test_bridge_runner.py  test_cli.py  test_config_local.py  test_cookie_capture.py  test_e2e_blackbox.py  test_engine_searxng.py  test_evidence_bucketing.py  test_health_m3.py  test_integrations_m4.py  test_json_contract.py  test_llm_provider.py  test_mcp_autostart.py  test_mcp_server.py  test_packaging.py  test_quality.py  test_research.py  test_restart_mcp_script.py  test_runtime_m6.py  test_search_planner.py  test_v3_hardening.py  test_verify_workflow.py
