[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "source-radar"
version = "0.2.0a1"
description = "Local CLI and collection engine for Chinese internet source verification."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [
  { name = "source-radar contributors" }
]
dependencies = []

[project.optional-dependencies]
trafilatura = [
  "trafilatura>=2.0",
]
crawl4ai = [
  "crawl4ai>=0.7",
]
mcp = [
  "mcp>=1.0",
]
dynamic = [
  "trafilatura>=2.0",
  "crawl4ai>=0.7",
]
dev = [
  "trafilatura>=2.0",
  "crawl4ai>=0.7",
]

[project.scripts]
source-radar = "source_radar.cli:main"

[tool.setuptools]
package-dir = { "" = "app" }

[tool.setuptools.packages.find]
where = ["app"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

